
syntax = "proto3";
// system_user_dept 系统用户部门
package user;
option go_package = "./user";
import "google/protobuf/timestamp.proto";

// SystemUserDeptObject 数据对象
message SystemUserDeptObject {
	// @inject_tag: db:"id" json:"id"
	optional int64 id = 1; //编号
	// @inject_tag: db:"system_user_id" json:"systemUserId"
	optional int64 system_user_id = 2; //系统用户 id
	// @inject_tag: db:"system_dept_id" json:"systemDeptId"
	optional int64 system_dept_id = 3; //部门 id
	// @inject_tag: db:"deleted" json:"deleted"
	optional int32 deleted = 4; //删除
	// @inject_tag: db:"system_tenant_id" json:"systemTenantId"
	optional int64 system_tenant_id = 5; //租户
	// @inject_tag: db:"creator" json:"creator"
	optional string creator = 6; //创建人
	// @inject_tag: db:"create_time" json:"createTime"
	google.protobuf.Timestamp create_time = 7; //创建时间
	// @inject_tag: db:"updater" json:"updater"
	optional string updater = 8; //更新人
	// @inject_tag: db:"update_time" json:"updateTime"
	google.protobuf.Timestamp update_time = 9; //更新时间
}


// SystemUserDeptCustomObject 数据对象
message SystemUserDeptCustomObject {
	// @inject_tag: db:"system_user_id" json:"systemUserId"
	optional int64 system_user_id = 1; //系统用户 id
	// @inject_tag: db:"system_dept_ids" json:"systemDeptIds"
	optional bytes system_dept_ids = 2; //部门 id
	// @inject_tag: db:"deleted" json:"deleted"
	optional int32 deleted = 3; //删除
	// @inject_tag: db:"system_tenant_id" json:"systemTenantId"
	optional int64 system_tenant_id = 4; //租户
	// @inject_tag: db:"creator" json:"creator"
	optional string creator = 5; //创建人
	// @inject_tag: db:"create_time" json:"createTime"
	google.protobuf.Timestamp create_time = 6; //创建时间
	// @inject_tag: db:"updater" json:"updater"
	optional string updater = 7; //更新人
	// @inject_tag: db:"update_time" json:"updateTime"
	google.protobuf.Timestamp update_time = 8; //更新时间
}


// SystemUserDeptCreateRequest 创建数据请求
message SystemUserDeptCreateRequest {
	SystemUserDeptCustomObject data = 1;
}
// SystemUserDeptCreateResponse 创建数据响应
message SystemUserDeptCreateResponse {
	int64 code = 1;
	string msg = 2;
	int64 data = 3;
}
// SystemUserDeptListRequest 列表数据
message SystemUserDeptListRequest {
	
	// @inject_tag: db:"system_tenant_id" json:"systemTenantId"
	optional int64 system_tenant_id = 1; // 租户
	// @inject_tag: db:"deleted" json:"deleted"
	optional int32 deleted = 2; // 删除
	// @inject_tag: db:"system_dept_id" json:"systemDeptId"
	optional int64 system_dept_id = 3; // 部门 id
	// @inject_tag: db:"system_user_id" json:"systemUserId"
	optional int64 system_user_id = 4; // 系统用户 id

}

// SystemUserDeptListResponse 数据响应
message SystemUserDeptListResponse {
	int64 code = 1;
  	string msg = 2;
	repeated SystemUserDeptObject data = 3;
}


// SystemUserDeptService 服务
service SystemUserDeptService{
	rpc SystemUserDeptCreate(SystemUserDeptCreateRequest) returns (SystemUserDeptCreateResponse);
	rpc SystemUserDeptList(SystemUserDeptListRequest) returns (SystemUserDeptListResponse);
}
