
syntax = "proto3";
// system_user_role 系统用户和系统角色关联表
package user;
option go_package = "./user";
import "google/protobuf/timestamp.proto";

// SystemUserRoleObject 数据对象
message SystemUserRoleObject {
	// @inject_tag: db:"id" json:"id"
	optional int64 id = 1; //自增编号
	// @inject_tag: db:"system_user_id" json:"systemUserId"
	optional int64 system_user_id = 2; //用户编号
	// @inject_tag: db:"system_role_id" json:"systemRoleId"
	optional int64 system_role_id = 3; //角色编号
	// @inject_tag: db:"creator" json:"creator"
	optional string creator = 4; //创建者
	// @inject_tag: db:"create_time" json:"createTime"
	google.protobuf.Timestamp create_time = 5; //创建时间
	// @inject_tag: db:"updater" json:"updater"
	optional string updater = 6; //更新者
	// @inject_tag: db:"update_time" json:"updateTime"
	google.protobuf.Timestamp update_time = 7; //更新时间
}
// SystemUserRoleCreateRequest 创建数据请求
message SystemUserRoleCreateRequest {
	// @inject_tag: db:"system_user_id" json:"systemUserId"
	optional int64 system_user_id = 1; //用户编号
	// @inject_tag: db:"system_role_ids" json:"systemRoleIds"
	optional bytes system_role_ids = 2; //菜单ID
	// @inject_tag: db:"creator" json:"creator"
	optional string creator = 3; //创建者
	// @inject_tag: db:"create_time" json:"createTime"
	google.protobuf.Timestamp create_time = 4; //创建时间
	// @inject_tag: db:"updater" json:"updater"
	optional string updater = 5; //更新者
	// @inject_tag: db:"update_time" json:"updateTime"
	google.protobuf.Timestamp update_time = 6; //更新时间
}
// SystemUserRoleCreateResponse 创建数据响应
message SystemUserRoleCreateResponse {
	int64 code = 1;
	string msg = 2;
	int64 data = 3;
}
// SystemUserRoleListRequest 列表数据
message SystemUserRoleListRequest {
	
	// @inject_tag: db:"system_role_id" json:"systemRoleId"
	optional int64 system_role_id = 1; // 角色编号
	// @inject_tag: db:"system_user_id" json:"systemUserId"
	optional int64 system_user_id = 2; // 用户编号

}

// SystemUserRoleListResponse 数据响应
message SystemUserRoleListResponse {
	int64 code = 1;
  	string msg = 2;
	repeated SystemUserRoleObject data = 3;
}


// SystemUserRoleService 服务
service SystemUserRoleService{
	rpc SystemUserRoleCreate(SystemUserRoleCreateRequest) returns (SystemUserRoleCreateResponse);
	rpc SystemUserRoleList(SystemUserRoleListRequest) returns (SystemUserRoleListResponse);
}
